# smo-from-scratch

./: .gitignore  README.md  cli.py  datasets.sh  pyproject.toml
data/: .gitignore
smo/: main.py
src/: optimizer.py  tuner.py  utils.py
