[tool.poetry]
name = "smo-from-scratch"
version = "0.1.0"
description = "Implementing Sequential Minimization Optimization algorithm from John C. Platt's 1998 paper."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ilias-ant/smo-from-scratch"
keywords = ["optimization", "smo", "svm-classifier"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

click = "^8.1.3"
scikit-learn = "1.0"
requests = "^2.28.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
black-nb = "^0.7"
isort = "^5.10.1"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
